Development
    Fix the textdomain issue in the nautilus plugin
    Arrow keys work menu in dvdnav mode, but once movie is playing they revert to normal behavior
        requires mplayer SVN r29156 to work
    When we have a video from an iPod, assume size is 640x480, since libgpod doesn't tell us the size
    Add *.ISO to the *.iso pattern match
    New preference key "use_pulse_flat_volume", set to true if running with pulseaudio 0.9.15
        Unless you have set "flat-volumes = no" in /etc/pulse/daemon.conf 
    Pulse Audio works differently in Fedora 11 (flat volume), so change it to behave like ALSA
    Convert from internal store to using gm_pref_store
    Add option to enable/disable midi support in plugin
    Change display so that media info is always visible when playing audio only files
    Fix problem with window size being wrong when video started with playlist open
    Fix VCD loading, parse them as a playlist
    If cover.jpg or Folder.jpg exist in same folder and song file, load it as cover art
    Patch from Onur to fix segfault when theme is missing icons
    Make Bold and Italic work better in Subtitle font
    Fix problem with default auto_hide value when not using gconf
    Update the Makefiles to work with the libraries
    Only load key from key file if it exists already
    Cleanup display when media is not seekable
    Have tracker expand when wide text is displayed
    Corrected crasher in recent menu, however this now requires GIO to work correctly
    Fixed meter and details display when combined with playlist
    Hook I key to show display_name when in fullscreen mode
    Prevent invalid memory accesses
    Move map/unmap code back to the main thread
    Add thumb position option to widget
    Use more bars in meter, fix some drawing issues in the meter
    Fix some problems with the media tracker drawing code
    Change audio meter calcs
    Addition of the new Media Tracker to replace the old progress bar