@@ -1,4 +1,5 @@
 Development
+    Switch audio meter to be non-double buffering to help speed it up
     Fix the textdomain issue in the nautilus plugin
     Arrow keys work menu in dvdnav mode, but once movie is playing they revert to normal behavior
         requires mplayer SVN r29156 to work
